--- a/k3s.org
+++ b/k3s.org
@@ -7,7 +7,24 @@
 #+INCLUDE: "./meta/intro.org"
 
 * Core Config
-#+INCLUDE: "./config.org"
+** CLUSTER
+ =CLUSTER= is the domain name of your cluster:
+ #+name: CLUSTER
+ #+begin_src config :eval no
+ k3s.example.com
+ #+end_src
+** CLUSTER_SSH_USER
+  =CLUSTER_SSH_USER= is the admin SSH account of the cluster.
+  #+name: CLUSTER_SSH_USER
+  #+begin_src config :eval no
+  root
+  #+end_src
+** KUBE_CONFIG
+ =KUBE_CONFIG= is the local path to the kubectl config file
+ #+name: KUBE_CONFIG
+ #+begin_src config :noweb yes :eval no
+ ${HOME}/.kube/<<CLUSTER>>-config
+ #+end_src
 * kube-system
 =kube-system= is the namespace for running system wide features, mostly network
 related. 
