--- a/deployments/sealed_secrets.org
+++ b/deployments/sealed_secrets.org
@@ -6,13 +6,9 @@ local to this config, the use of [[https://github.com/bitnami-labs/sealed-secret
 copy of the secrets in our git repository. Only the cluster can decrypt sealed
 secrets.
 ** Install bitnami-labs/sealed-secrets to the cluster
-In [[Workstation tools][Workstation tools]] you already installed the command line client. Now you need
-to install it to the cluster:
+You should have already installed the command line client (See =Workstation
+Tools=). Now it's time to install the cluster side portion:
 
 #+begin_src shell :noweb yes :eval never-export :exports code
 echo kubectl --kubeconfig=<<KUBE_CONFIG>> apply -f https://github.com/bitnami-labs/sealed-secrets/releases/download/<<SEALED_SECRETS_VERSION>>/controller.yaml
 #+end_src
-
-#+RESULTS:
-: kubectl --kubeconfig=/home/ryan/.kube/k3s.example.com-config apply -f https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.14.1/controller.yaml
-
