--- a/clusters/k3s.example.com/k3s.example.com.org
+++ b/clusters/k3s.example.com/k3s.example.com.org
@@ -1,10 +1,10 @@
 #+title: Literate K3s Cluster
 #+author: EnigmaCurry
 #+OPTIONS: ^:{}
-#+EXPORT_FILE_NAME: ../index.html
-#+INCLUDE: "../meta/export-html.org"
-#+INCLUDE: "../meta/github-ribbon.org"
-#+INCLUDE: "../meta/intro.org"
+#+EXPORT_FILE_NAME: ../../index.html
+#+INCLUDE: "../../meta/export-html.org"
+#+INCLUDE: "../../meta/github-ribbon.org"
+#+INCLUDE: "../../meta/intro.org"
 
 * Core Config
 ** CLUSTER
@@ -37,15 +37,15 @@
 * kube-system
 =kube-system= is the namespace for running system wide features, mostly network
 related. 
-#+INCLUDE: "../deployments/traefik.org"
-#+INCLUDE: "../deployments/sealed_secrets.org"
+#+INCLUDE: "../../lib/traefik.org"
+#+INCLUDE: "../../lib/sealed_secrets.org"
 * git-system
 =git-system= is the namespace created for Gitea.
-#+INCLUDE: "../deployments/gitea.org"
+#+INCLUDE: "../../lib/gitea.org"
 * flux-system
-#+INCLUDE: "../deployments/flux.org"
+#+INCLUDE: "../../lib/flux.org"
 * LICENSE
-#+INCLUDE: "../LICENSE.org"
+#+INCLUDE: "../../LICENSE.org"
 * Footnotes
 
 This should be the very last section in this document. It is excluded from the
@@ -54,18 +54,12 @@ file. When Emacs loads a file, it searches for the =Local Variables= comment at
 the very bottom of the file, and loads variables defined there and runs any
 =eval= code listed.
 
-Here is the startup code block that =Local Variables= references:
-
-#+name: k3s-org-emacs-load
-#+begin_src elisp :noweb yes :eval never-export :results none
-(load-file "../meta/pre-tangle-auto-save-hook.el")
-(load-file "../meta/unpackaged.el")
-#+end_src
+The eval line runs the code from [[attachment:../../meta/org-meta.el][meta/org-meta.el]]
 
 Keep this at the very bottom of the file:
 
 # Local Variables:
-# eval: (progn (org-babel-goto-named-src-block "k3s-org-emacs-load") (org-babel-execute-src-block) (outline-hide-sublevels 1))
+# eval: (progn (load-file "../../meta/org-meta.el"))
 # End:
 
 
