--- a/clusters/k3s.example.com/k3s.example.com.org
+++ b/clusters/k3s.example.com/k3s.example.com.org
@@ -1,7 +1,7 @@
 #+title: Literate K3s Cluster
 #+author: EnigmaCurry
 #+OPTIONS: ^:{}
-#+EXPORT_FILE_NAME: ../../index.html
+#+EXPORT_FILE_NAME: index.html
 #+INCLUDE: "../../meta/export-html.org"
 #+INCLUDE: "../../meta/github-ribbon.org"
 #+INCLUDE: "../../meta/intro.org"
